# LeagueLanguageChanger

./: CMakeLists.txt  README.md
ConfigFileTemplate/: LlcConfig.json
src/: main.cpp
src/LolLangaugeChanger/: App.cpp  App.hpp
src/LolLangaugeChanger/JsonManager/: DataStruct.cpp  DataStruct.hpp  JsonManager.cpp  JsonManager.hpp
